<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaskFlow</string>
    <string name="editor_new_title">Nueva tarea</string>
    <string name="editor_edit_title">Editar tarea</string>

    <string name="section_today">Hoy</string>
    <string name="section_upcoming">Próximos días</string>
    <string name="section_someday">Algún día</string>
    <string name="section_completed">Completadas</string>

    <string name="priority_high">Alta</string>
    <string name="priority_medium">Media</string>
    <string name="priority_low">Baja</string>

    <string name="field_title">Título</string>
    <string name="field_description">Descripción</string>
    <string name="field_priority">Prioridad</string>
    <string name="field_date">Fecha</string>
    <string name="field_category">Categoría</string>

    <string name="task_no_date">Sin fecha</string>
    <string name="task_pick_date">Elegir fecha</string>

    <string name="action_save">Guardar</string>
    <string name="action_pick_date">Elegir</string>
    <string name="action_clear_date">Quitar</string>
    <string name="action_delete">Eliminar</string>

    <string name="search_hint">Buscar tareas</string>
    <string name="filter_all">Todas</string>

    <string name="add_task">Agregar tarea</string>
    <string name="empty_tasks">No hay tareas para mostrar</string>

    <string name="delete_task_title">Eliminar tarea</string>
    <string name="delete_task_message">¿Deseas eliminar esta tarea de forma permanente?</string>

    <string name="error_title_required">El título es obligatorio</string>

    <string name="notification_channel_name">Recordatorios TaskFlow</string>
    <string name="notification_title">Recordatorio de tarea</string>
</resources>
